package com.tangerine.theatre_manager.order.model.vo;

public enum OrderStatus {
    ACCEPTED,
    PAYMENT_DONE,
    OUTDATED
}
