package com.tangerine.theatre_manager.performance.model.vo;

public enum Genre {
    OPERA, PLAY, MUSICAL
}
