package com.tangerine.theatre_manager.performance.model.vo;

public enum Stage {
    A1, A2,
    B1, B2
}
